RESOLVED FIXED 277407
REGRESSION(256273@main): Stopped remote audio destination is started when audio buffer changes
https://bugs.webkit.org/show_bug.cgi?id=277407
Summary REGRESSION(256273@main): Stopped remote audio destination is started when aud...
Kimmo Kinnunen
Reported 2024-07-31 01:28:24 PDT
REGRESSION(256273@main): Stopped remote audio destination is started when audio buffer changes
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-31 01:28:35 PDT
Kimmo Kinnunen
Comment 2 2024-07-31 01:39:54 PDT
EWS
Comment 3 2024-08-01 04:34:13 PDT
Committed 281701@main (b988d2b01795): <https://commits.webkit.org/281701@main> Reviewed commits have been landed. Closing PR #31524 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.