REGRESSION(256273@main): Stopped remote audio destination is started when audio buffer changes https://bugs.webkit.org/show_bug.cgi?id=277407 rdar://132883157

Reviewed by Youenn Fablet and Per Arne Vollan.

Avoid starting the audio destination when the sample buffer is set if
the destination is not playing.

Fixes power regressions in cases when the audio destination is not
running.

* Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp:

Canonical link: https://commits.webkit.org/281701@main