Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp
@@ -104,6 +104,7 @@ public:
 
     void audioSamplesStorageChanged(ConsumerSharedCARingBuffer::Handle&& handle)
     {
+        bool wasPlaying = m_isPlaying;
         if (m_isPlaying) {
             stop();
             ASSERT(!m_isPlaying);
@@ -113,8 +114,10 @@ public:
         m_ringBuffer = ConsumerSharedCARingBuffer::map(sizeof(Float32), m_numOutputChannels, WTFMove(handle));
         if (!m_ringBuffer)
             return;
-        start();
-        ASSERT(m_isPlaying);
+        if (wasPlaying) {
+            start();
+            ASSERT(m_isPlaying);
+        }
     }
 #endif
 
